--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,35 @@ keywords = ["pytorch", "deep-learning", "computer-vision"]
 categories = ["science"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
+edition = "2018"
 
 [dependencies]
+
 lazy_static = "1.3.0"
-
-# The core APIs, including the Serialize and Deserialize traits. Always
-# required when using Serde. The "derive" feature is only required when
-# using #[derive(Serialize, Deserialize)] to make Serde work with structs
-# and enums defined in your crate.
 serde = { version = "1.0", features = ["derive"] }
-
-# Each data format lives in its own crate; the sample code below uses JSON
-# but you may be using a different one.
 serde_json = "1.0"
+
+libc = "0.2.0"
+ndarray = "0.15"
+rand = "0.8"
+thiserror = "1"
+torch-sys = { version = "0.8.0", path = "torch-sys" }
+zip = "0.6"
+half = "1.6"
+
+cpython = { version = "0.2.0", optional = true }
+
+[dev-dependencies]
+anyhow = "1"
+
+[workspace]
+members = ["torch-sys"]
+
+[features]
+default = ["torch-sys/download-libtorch"]
+python = ["cpython"]
+doc-only = ["torch-sys/doc-only"]
+cuda-tests = []
+
+[package.metadata.docs.rs]
+features = [ "doc-only" ]
