--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ lazy_static = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+typetag = "0.1"
+
 libc = "0.2.0"
 ndarray = "0.15"
 rand = "0.8"
